force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Would_you_take_a_class__c.field-meta.xml
<CustomField>
    <fullName>PPF_Would_you_take_a_class__c</fullName>
    <description>if it were online</description>
    <inlineHelpText>if it were online</inlineHelpText>
    <label>Would you take a class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>