force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Zip__c.field-meta.xml
<CustomField>
    <fullName>PPF_Zip__c</fullName>
    <label>Zip</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>