force-app/main/default/objects/Provider_Participant_Form__c/fields/Program_Selected__c.field-meta.xml
<CustomField>
    <fullName>Program_Selected__c</fullName>
    <label>Program Selected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LA Care</fullName>
            </value>
            <value>
                <fullName>IHSS + A&amp;D</fullName>
            </value>
            <value>
                <fullName>Ed Fund</fullName>
            </value>
            <value>
                <fullName>CDPH/ UCSF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>