force-app/main/default/objects/Provider_Participant_Form__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Provider Participant Forms</relationshipLabel>
    <relationshipName>Provider_Participant_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>