force-app/main/default/objects/Provider_Participant_Form__c/fields/Regularly_used_devices__c.field-meta.xml
<CustomField>
    <fullName>Regularly_used_devices__c</fullName>
    <inlineHelpText>Which device do you use to regularly go online?</inlineHelpText>
    <label>Regularly used devices</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smartphone</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>