force-app/main/default/objects/Provider_Participant_Form__c/fields/Website_search_Email_compatibility__c.field-meta.xml
<CustomField>
    <fullName>Website_search_Email_compatibility__c</fullName>
    <inlineHelpText>Do you feel comfortable using technology to search a website and navigate emails?</inlineHelpText>
    <label>Website Search and Email Compatibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>