force-app/main/default/objects/Provider_Participant_Form__c/fields/Years_lived_inside_USA__c.field-meta.xml
<CustomField>
    <fullName>Years_lived_inside_USA__c</fullName>
    <description>If born outside United States, years lived inside of the United States</description>
    <inlineHelpText>If born outside United States, years lived inside of the United States</inlineHelpText>
    <label># of Years lived in United States</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>